# armadito-mod-pdf

./: .gitignore  .travis.yml  CHANGES  Makefile.am  README.md  Spec.txt  configure.ac  pdfAnalyzer.pl  sonar-project.properties
lib/: Makefile.am  TODO  libarmadito-pdf.pc.in
lib/analysis/: CVEs.pm  DocumentStruct.pm  ObjectAnalysis.pm
lib/conf/: Config.pm
lib/includes/: Makefile.am  armaditopdf.h  filters.h  log.h  osdeps.h  pdfAnalysis.h  pdfParsing.h  pdfStructs.h  utils.h
lib/includes/armaditopdf/: analysis.h  errors.h  filters.h  log.h  miniz.c  osdeps.h  parsing.h  structs.h  utils.h
lib/src/: armaditopdf.c  filters.c  log.c  objectsAnalysis.c  osdeps.c  parsing.c  pdfObjectsAnalysis.c  pdfParsing.c  pdfStructAnalysis.c  pdfStructs.c  structAnalysis.c  structs.c  utils.c
lib/utils/: CleanRewriting.pm  Filters.pm  StructParsing.pm
module/: Makefile.am  modulePDF.c  modulePDF.h
module7/: Makefile  main.c  parser.c  readme.txt  scandir.sh
module7/includes/: filters.h  log.h  miniz.c  osdeps.h  pdfAnalyzer.h
module7/src/: filters.c  log.c  osdeps.c  pdfAnalysis.c  pdfObjectsAnalysis.c  pdfParsing.c  pdfStructAnalysis.c  utils.c
module7/win32/ArmaditoPDF/ArmaditoPDF/: ArmaditoPDF.vcxproj  ArmaditoPDF.vcxproj.filters
module7/win32/UhuruPDF/: UhuruPDF.sdf  UhuruPDF.sln
module7/win32/UhuruPDF/UhuruPDF/: UhuruPDF.vcxproj  UhuruPDF.vcxproj.filters
poc/: pdfAnalyzer.pl
poc/lib/analysis/: ObjectAnalysis.pm
poc/lib/conf/: Config.pm
poc/lib/utils/: Filters.pm
tools/: Makefile.am
tools/armadito-pdf/: Makefile.am  main.c
tools/cli_analyzer/: Makefile  main.c  scandir.bat  scandir.sh
tools/cli_parser/: parser.c
tools/perl_poc/lib/analysis/: DocumentStruct.pm
tools/perl_poc/lib/utils/: CleanRewriting.pm
win32/ArmaditoPDF/: ArmaditoPDF.sln
win32/ArmaditoPDF/ArmaditoPDF/: ArmaditoPDF.vcxproj  ArmaditoPDF.vcxproj.filters
